@@ -1086,3 +1086,7 @@ Wed Jul 30 09:32:01 CEST 2003 <ddouxchamps@users.sf.net>
 2006-12-14 Damien Douxchamps<ddouxchamps@users.sf.net>
     * SVN 339: fixed a function prototype (another mismatch between .h and .h
       files!)
+	
+2006-12-14 Damien Douxchamps<ddouxchamps@users.sf.net>
+    * SVN 340: fixed missing update of allocated_image_bytes in the frame
+      conversion functions.
